--- a/bower.json
+++ b/bower.json
@@ -21,12 +21,11 @@
         "tests"
     ],
     "dependencies": {
-        "angular": "^1.6.1",
+        "angular": "^1.6.3",
         "angular-formly": "^8.4.1",
         "bootstrap": "^3.3.7",
         "angular-formly-templates-bootstrap": "^6.3.2",
-        "angular-route": "^1.6.1",
-        "angular-messages": "^1.6.1",
-        "requirejs": "^2.3.2"
+        "angular-route": "^1.6.3",
+        "angular-messages": "^1.6.3"
     }
 }
